[package]
name = "events-protocol-rs"
version = "0.1.0"
authors = ["Bruno Ortiz <brunortiz11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.53"
serde = "1.0.110"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
